src/test/deca/syntax/valid/class/15_new_appel_methodes_class.deca
/*
	Description: test syntax new et l'appelation des methodes

	Resultat: syntaxiquement correct

	Date:20/1/2020
	

*/

{
	A a=new A();
	priintln("a.getX() = ",a.getX());

}

