src/test/deca/syntax/invalid/class/main_avant_class.deca
/*
	Description: declaration of main before class

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/

{

	print("hello");
}

class a extends b{
	
}
